# ogre-caelum

./: .gitignore  CMakeDependenciesConfig.txt  CMakeLists.txt  Caelum.doxygen  Caelum.pc.in  CaelumConfig.cmake.in  Caelum_vs8.sln  Caelum_vs9.sln  Contributors.txt  Doxyfile.in  ReadMe.md  SConstruct  annotated.html  classCaelum_1_1AccesorPropertyDescriptor-members.html  classCaelum_1_1AccesorPropertyDescriptor.html  classCaelum_1_1AccesorPropertyDescriptor__inherit__graph.map  classCaelum_1_1AccesorPropertyDescriptor__inherit__graph.md5  classCaelum_1_1Astronomy-members.html  classCaelum_1_1Astronomy.html  classCaelum_1_1BaseSkyLight-members.html  classCaelum_1_1BaseSkyLight.html  classCaelum_1_1BaseSkyLight__inherit__graph.map  classCaelum_1_1BaseSkyLight__inherit__graph.md5  classCaelum_1_1CaelumDefaultTypeDescriptorData-members.html  classCaelum_1_1CaelumDefaultTypeDescriptorData.html  classCaelum_1_1CaelumPlugin-members.html  classCaelum_1_1CaelumPlugin.html  classCaelum_1_1CaelumPlugin__inherit__graph.map  classCaelum_1_1CaelumPlugin__inherit__graph.md5  classCaelum_1_1CaelumSystem-members.html  classCaelum_1_1CaelumSystem.html  classCaelum_1_1CaelumSystem__inherit__graph.map  classCaelum_1_1CaelumSystem__inherit__graph.md5  classCaelum_1_1CameraBoundElement-members.html  classCaelum_1_1CameraBoundElement.html  classCaelum_1_1CameraBoundElement__inherit__graph.map  classCaelum_1_1CameraBoundElement__inherit__graph.md5  classCaelum_1_1CloudSystem-members.html  classCaelum_1_1CloudSystem.html  classCaelum_1_1DefaultTypeDescriptor-members.html  (+213 more)
.github/workflows/: ci-build.yml
cmake/: Caelum.pc.in  resources.cfg.in
main/: CMakeLists.txt  Caelum_vs8.vcproj  Caelum_vs9.vcproj
main/include/: Astronomy.h  Caelum.h  CaelumConfig.h.in  CaelumExceptions.h  CaelumPlugin.h  CaelumPrecompiled.h  CaelumPrerequisites.h  CaelumScriptTranslator.h  CaelumSystem.h  CameraBoundElement.h  CloudSystem.h  DepthComposer.h  FastGpuParamRef.h  FlatCloudLayer.h  GroundFog.h  ImageStarfield.h  InternalUtilities.h  Moon.h  PointStarfield.h  PrecipitationController.h  PrivatePtr.h  SkyDome.h  SkyLight.h  Sun.h  TypeDescriptor.h  UniversalClock.h
main/resources/: DepthComposer.cg  DepthComposer.material  DepthComposerMainFP.glsl  DepthRender.program  DepthRenderAlphaRejectionFP.glsl  DepthRenderAlphaRejectionVP.glsl  DepthRenderFP.glsl  DepthRenderVP.glsl  GroundFog.program  GroundFogDomeFP.glsl  GroundFogDomeVP.glsl  GroundFogFP.glsl  GroundFogVP.glsl  Haze.program  HazeFP.glsl  HazeVP.glsl  LayeredClouds.material  LayeredCloudsFP.glsl  LayeredCloudsVP.glsl  MinimalCompositorVP.glsl  MinimalCompositorVP.program  PhaseMoonFP.glsl  PhaseMoonVP.glsl  PointStarfield.material  Precipitation.material  PrecipitationMainFP.glsl  PrecipitationMainVP.glsl  SkyDome.material  SkyDomeFP.glsl  SkyDomeFPCommon.h  SkyDomeVP.glsl  StarPointFP.glsl  StarPointVP.glsl  moon.material
main/src/: Astronomy.cpp  BrightStarCatalogue.cpp  CaelumDefaultTypeDescriptorData.cpp  CaelumPlugin.cpp  CaelumPrecompiled.cpp  CaelumScriptTranslator.cpp  CaelumSystem.cpp  CameraBoundElement.cpp  CloudSystem.cpp  DepthComposer.cpp  FastGpuParamRef.cpp  FlatCloudLayer.cpp  GroundFog.cpp  ImageStarfield.cpp  InternalUtilities.cpp  Moon.cpp  PointStarfield.cpp  PrecipitationController.cpp  SkyDome.cpp  SkyLight.cpp  Sun.cpp  TypeDescriptor.cpp  UniversalClock.cpp
samples/: CMakeLists.txt  CaelumDemo_vs8.vcproj  CaelumDemo_vs9.vcproj  CaelumLab_vs8.vcproj  CaelumLab_vs9.vcproj  PostBuild.bat
samples/include/: CaelumDemo.h  CaelumDemoCommon.h  CaelumLab.h  ExampleApplication.h  ExampleFrameListener.h  LegacyTerrainLoader.h
samples/resources/: CaelumDemoTerrain.cfg  CaelumLab.layout  CaelumSample.cg  CaelumSample.material
samples/resources/gui/: TaharezLook.imageset  TaharezLook.looknfeel  TaharezLookSkin.scheme  bluehighway-10.font  bluehighway-12.font  bluehighway-8.font
samples/src/: CaelumDemo.cpp  CaelumLab.cpp  CaelumTest.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+189 more)
